fix: make menu wider on narrower screens AB#28127

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -1,5 +1,6 @@
 $z-index: 900;
 $menu-width: 13vw;
+$menu-width-small-res: 16vw;
 $line-height: 2.26rem;
 $toggle-button-bottom: 1rem;
 $toggle-button-right: 0.5vw;
@@ -14,6 +15,9 @@ $toggle-button-right: 0.5vw;
   display: flex;
   flex-direction: column;
   max-height: calc(0.625rem + $line-height * 10);
+  @media (max-width: 1280px) {
+    width: $menu-width-small-res;
+  }
 
   #layer-menu-toggle-button {
     width: 100%;
